ENG-7074 fix resize handler z-indexes

--- a/assets/stylesheets/less/partials/dagView.less
+++ b/assets/stylesheets/less/partials/dagView.less
@@ -2632,9 +2632,6 @@
             background-color: @color-dag-schema-selected;
 
         }
-        .type {
-            color: @color-bg-select-blue;
-        }
     }
 
     .noFields {
